changed back to googleapi to avoid font flickering

--- a/style.css
+++ b/style.css
@@ -19,14 +19,6 @@
     }
 }
 
-@font-face {
-    src: url('./fonts/Nova_Square/NovaSquare-Regular.woff2') format('woff2');
-    font-family: "Nova Square";
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
-
 * {
     margin: 0;
     text-decoration: none;
